--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "fabric": "^6.0.2",
+    "fabricjs": "^1.0.0",
+    "framer-motion": "^11.3.21",
+    "konva": "^9.3.14",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-konva": "^18.2.10",
     "react-use-gesture": "^9.1.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
